--- a/jfrog-pipelines-docker-build-push.yml
+++ b/jfrog-pipelines-docker-build-push.yml
@@ -2,22 +2,22 @@ resources:
   - name: repo_1_docker_build_push
     type: GitRepo
     configuration:
-      gitProvider: github   # replace with your integration
-      path: BatelT/jfrog-pipelines-docker-build-push    # replace with your repository name
+      gitProvider: Github   # replace with your integration
+      path: Arti/jfrog-pipelines-docker-build-push    # replace with your repository name
       branches:
         include: master
 
   - name: build_info_1_docker_build_push
     type: BuildInfo
     configuration:
-      sourceArtifactory: demoArt
+      sourceArtifactory: Arti
       buildName: svc_build
       buildNumber: 1
 
   - name: promoted_build_info
     type: BuildInfo
     configuration:
-      sourceArtifactory: demoArt
+      sourceArtifactory: Arti
       buildName: svc_build
       buildNumber: 1
 
@@ -54,19 +54,19 @@ pipelines:
         configuration:
           dockerFileLocation: .
           dockerFileName: Dockerfile
-          dockerImageName: batelt-docker-local.jfrog.io/docker-local/alpine37
+          dockerImageName: maayana-docker-local.jfrog.io/docker-local/alpine37
           dockerImageTag: ${run_number}
           inputResources:
             - name: repo_1_docker_build_push
           integrations:
-            - name: demoArt
+            - name: Arti
 
       - name: docker_push
         type: DockerPush
         configuration:
           targetRepository: docker-local
           integrations:
-            - name: demoArt
+            - name: Arti
           inputSteps:
             - name: docker_build
 
@@ -83,7 +83,7 @@ pipelines:
         configuration:
           targetRepository: promoted-pipelines
           integrations:
-            - name: demoArt
+            - name: Arti
           inputResources:
             - name: build_info_1_docker_build_push
           outputResources:
